<resources>
    <string name="app_name">Today-sEyebrowKtVer</string>
    <string name="app_kor_name">오늘의눈썹</string>
    <string name="title_activity_base">BaseActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Title
    <string name="title_create_evt_activity">예약생성</string>
    //Customer Data
    <string name="cusName_create_evt_activity">테스트 고객</string>
    <string name="cusNmb_create_evt_activity">010-3077-3637</string>

    <string name="histroy_tv">방문이력</string>
    <string name="retouch">리터치</string>
    <string name="memo_title">제목</string>
    <string name="new_reserve">신규</string>
    <string name="load_cus_btn">고객정보 불러오기</string>
    <string name="rsv_date_tv">예약날짜</string>
    <string name="rsv_time_tv">예약시간</string>
    <string name="rsv_type_tv">예약유형</string>
    <string name="rsv_menu_tv">시술메뉴</string>
    <string name="rsv_pay_tv">결제방법</string>
    <string name="rsv_ok_btn">완료</string>

    <string name="example_5_title">Example 5</string>

    //============================================firebase functions==============================
<!--    <string name="firebase_functions_base_url">https://us-central1-today-s-eyebrow-kt-ver.cloudfunctions.net/</string>-->
<!--    <string name="default_web_client_id">337629695035-nrjagt683ucr715dgc9hlqe891gijqif.apps.googleusercontent.com</string>-->
</resources>