<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityCreateEventNewCus">

    <RelativeLayout
        android:id="@+id/header_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/mainPink"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/back_cardview"
            android:layout_width="@dimen/arrow_background_width"
            android:layout_height="@dimen/arrow_background_height"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_back_iv_left"
            android:backgroundTint="@color/transparent"
            android:clickable="true"


            app:cardCornerRadius="@dimen/half_arrow_background_width"
            app:cardElevation="0dp"

            app:rippleColor="@color/weakGrey">

            <ImageView
                android:id="@+id/back_iv"
                android:layout_width="@dimen/back_iv_width"
                android:layout_height="@dimen/back_iv_height"
                android:layout_gravity="center"

                android:adjustViewBounds="true"

                android:src="@drawable/revised_backarrow" />

        </com.google.android.material.card.MaterialCardView>


        <TextView
            android:id="@+id/joinTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"

            android:fontFamily="@font/notosansmonocjkkrbold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/title_create_evt_activity"
            android:textColor="@color/black"
            android:textSize="@dimen/title_textsize" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:background="@color/weakGrey" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/customer_Rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_big_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_small_horizontal_margin"
        android:layout_marginTop="@dimen/activity_big_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_big_horizontal_margin"

        android:orientation="horizontal"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_relative_layout">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/profile_cardview"
            android:layout_width="@dimen/profile_iv_background_width"
            android:layout_height="@dimen/profile_iv_background_height"
            android:layout_centerVertical="true"
            android:background="@color/ivory"
            android:backgroundTint="@color/mainPink"
            app:cardCornerRadius="100dp"

            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/profile_iv"
                android:layout_width="@dimen/profile_iv_width"
                android:layout_height="@dimen/profile_iv_height"
                android:layout_centerVertical="true"


                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"

                android:src="@drawable/thick_profile_iv_ivory" />


        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/cusDataLl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_big_horizontal_margin"
            android:layout_toRightOf="@id/profile_cardview"

            android:orientation="vertical">

            <TextView
                android:id="@+id/activity_create_evt_cusName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="@font/notosanscjkkrmedium"
                android:gravity="bottom"
                android:paddingTop="5dp"
                android:text="@string/cusName_create_evt_activity"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_default" />

            <TextView
                android:id="@+id/activity_create_evt_cusNbr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="@font/notosanscjkkrmedium"
                android:gravity="top"
                android:paddingBottom="5dp"
                android:text="@string/cusNmb_create_evt_activity"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize_default" />

        </LinearLayout>


    </RelativeLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rsv_type_Rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_big_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_big_horizontal_margin"
        android:layout_marginTop="@dimen/activity_small_vertical_margin"
        android:layout_marginEnd="@dimen/activity_big_horizontal_margin"
        android:background="@drawable/rounded_corner_weakgrey"

        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customer_Rl">

        <TextView
            android:id="@+id/rsv_type_tv"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="@dimen/activity_small_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_small_horizontal_margin"
            android:layout_marginTop="10dp"
            android:layout_weight="1"

            android:fontFamily="@font/notosanscjkkrmedium"
            android:includeFontPadding="false"
            android:gravity="center"
            android:text="@string/rsv_type_tv"
            android:textColor="@color/mainGrey"
            android:textSize="@dimen/textsize_default" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="0dp"

            app:layout_constraintTop_toBottomOf="@+id/rsv_type_tv"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="@dimen/activity_small_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_small_horizontal_margin"

            android:layout_marginBottom="@dimen/activity_small_vertical_margin"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/newRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="신규"
                android:fontFamily="@font/notosanscjkkrmedium"
                android:includeFontPadding="false"
                android:textColor="@color/mainGrey"
                android:paddingLeft="10dp"

                />


            <RadioButton
                android:id="@+id/retouchRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_big_horizontal_margin"

                android:text="리터치"
                android:fontFamily="@font/notosanscjkkrmedium"
                android:includeFontPadding="false"
                android:textColor="@color/mainGrey"
                android:paddingLeft="10dp"/>


        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rsv_date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_big_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_big_horizontal_margin"
        android:layout_marginTop="@dimen/activity_small_vertical_margin"
        android:layout_marginEnd="@dimen/activity_big_horizontal_margin"
        android:background="@drawable/rounded_corner_weakgrey"

        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rsv_type_Rl">

        <TextView
            android:id="@+id/dateTv"
            android:layout_width="wrap_content"
            android:layout_height="0dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="@dimen/activity_small_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_small_horizontal_margin"
            android:layout_marginTop="10dp"
            android:layout_weight="1"

            android:fontFamily="@font/notosanscjkkrmedium"
            android:includeFontPadding="false"
            android:gravity="center"
            android:text="@string/rsv_date_tv"
            android:textColor="@color/mainGrey"
            android:textSize="@dimen/textsize_default" />


        <TextView
            android:id="@+id/dateContentTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@+id/dateTv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="@dimen/activity_small_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_small_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_small_vertical_margin"
            android:layout_weight="1"
            android:fontFamily="@font/notosanscjkkrmedium"
            android:includeFontPadding="false"

            android:text="날짜를 선택해주세요"
            android:textColor="@color/mainPink"
            android:textSize="@dimen/textsize_default" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rsv_time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_big_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_big_horizontal_margin"
        android:layout_marginTop="@dimen/activity_small_vertical_margin"
        android:layout_marginEnd="@dimen/activity_big_horizontal_margin"
        android:background="@drawable/rounded_corner_weakgrey"

        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rsv_date_layout">

        <TextView
            android:id="@+id/timeTv"
            android:layout_width="wrap_content"
            android:layout_height="0dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/activity_small_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_small_horizontal_margin"
            android:layout_weight="1"

            android:fontFamily="@font/notosanscjkkrmedium"
            android:includeFontPadding="false"
            android:gravity="center"
            android:text="@string/rsv_time_tv"
            android:textColor="@color/mainGrey"
            android:textSize="@dimen/textsize_default" />

        <TextView
            android:id="@+id/timeContentTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/timeTv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="@dimen/activity_small_horizontal_margin"

            android:layout_marginLeft="@dimen/activity_small_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_small_vertical_margin"
            android:layout_weight="1"
            android:fontFamily="@font/notosanscjkkrmedium"
            android:includeFontPadding="false"
            android:gravity="center"

            android:text="시간을 입력해주세요"
            android:textColor="@color/mainPink"
            android:textSize="@dimen/textsize_default" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rsv_memo_layout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="@dimen/activity_big_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_big_horizontal_margin"
        android:layout_marginTop="@dimen/activity_small_vertical_margin"
        android:layout_marginEnd="@dimen/activity_big_horizontal_margin"
        android:background="@drawable/rounded_corner_weakgrey"

        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rsv_time_layout">

        <TextView
            android:id="@+id/memoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/activity_small_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_small_horizontal_margin"
            android:layout_weight="1"

            android:fontFamily="@font/notosanscjkkrmedium"
            android:includeFontPadding="false"
            android:gravity="center"
            android:text="@string/memo_tv"
            android:textColor="@color/mainGrey"
            android:textSize="@dimen/textsize_default" />

        <EditText
            android:id="@+id/memoEt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/memoTv"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="@dimen/activity_small_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_small_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_small_horizontal_margin"
            android:layout_marginRight="@dimen/activity_small_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_small_vertical_margin"
            android:layout_weight="3"

            android:background="@null"
            android:fontFamily="@font/notosanscjkkrmedium"
            android:includeFontPadding="false"

            android:gravity="top"
            android:hint="예약시 특이사항을 메모해주세요"
            android:inputType="textMultiLine"
            android:textColor="@color/mainGrey"
            android:textColorHint="@color/mainGreyFor50"

            android:textSize="@dimen/textsize_default" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/okBtn"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"

        android:background="@color/mainPink"
        android:fontFamily="@font/notosansmonocjkkrbold"

        android:includeFontPadding="false"
        android:gravity="center"
        android:text="@string/rsv_ok_btn"
        android:textColor="@color/mainGrey"
        android:textSize="@dimen/textsize_default"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>