<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ActivityCreateEventSkipCus">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/mainPink"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_iv"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="10dp"
            android:adjustViewBounds="true"
            android:fitsSystemWindows="true"
            app:srcCompat="@drawable/ic_chevron_left"
            app:tint="@color/black"/>

        <TextView
            android:id="@+id/joinTv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"

            android:fontFamily="@font/notosansmonocjkkrbold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/title_create_evt_activity"
            android:textColor="@color/black"
            android:textSize="@dimen/title_textsize" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rsv_type_Rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_big_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_big_horizontal_margin"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/activity_big_horizontal_margin"
        android:background="@drawable/rounded_corner_weakgrey"

        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_relative_layout">

        <TextView
            android:id="@+id/rsv_type_tv"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/activity_small_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_small_horizontal_margin"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/notosanscjkkrmedium"
            android:gravity="center"

            android:includeFontPadding="false"
            android:text="@string/rsv_type_tv"
            android:textColor="@color/mainGrey"
            android:textSize="@dimen/textsize_default"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="0dp"

            android:layout_marginStart="@dimen/activity_small_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_small_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_small_vertical_margin"
            android:layout_weight="1"

            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rsv_type_tv">

            <RadioButton
                android:id="@+id/newRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="@font/notosanscjkkrmedium"
                android:includeFontPadding="false"
                android:paddingLeft="10dp"
                android:text="신규"
                android:textColor="@color/mainGrey"

                />


            <RadioButton
                android:id="@+id/retouchRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_big_horizontal_margin"

                android:fontFamily="@font/notosanscjkkrmedium"
                android:includeFontPadding="false"
                android:paddingLeft="10dp"
                android:text="리터치"
                android:textColor="@color/mainGrey" />


        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rsv_date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_big_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_big_horizontal_margin"
        android:layout_marginTop="@dimen/activity_small_vertical_margin"
        android:layout_marginEnd="@dimen/activity_big_horizontal_margin"
        android:background="@drawable/rounded_corner_weakgrey"

        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rsv_type_Rl">

        <TextView
            android:id="@+id/dateTv"
            android:layout_width="wrap_content"
            android:layout_height="0dp"

            android:layout_marginStart="@dimen/activity_small_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_small_horizontal_margin"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/notosanscjkkrmedium"
            android:gravity="center"

            android:includeFontPadding="false"
            android:text="@string/rsv_date_tv"
            android:textColor="@color/mainGrey"
            android:textSize="@dimen/textsize_default"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/dateContentTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="@dimen/activity_small_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_small_horizontal_margin"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="@dimen/activity_small_vertical_margin"
            android:layout_weight="1"
            android:fontFamily="@font/notosanscjkkrmedium"
            android:includeFontPadding="false"
            android:text="날짜를 선택해주세요"
            android:textColor="@color/mainPink"
            android:textSize="@dimen/textsize_default"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateTv" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rsv_time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_big_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_big_horizontal_margin"
        android:layout_marginTop="@dimen/activity_small_vertical_margin"
        android:layout_marginEnd="@dimen/activity_big_horizontal_margin"
        android:background="@drawable/rounded_corner_weakgrey"

        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rsv_date_layout">

        <TextView
            android:id="@+id/timeTv"
            android:layout_width="wrap_content"
            android:layout_height="0dp"

            android:layout_marginStart="@dimen/activity_small_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_small_horizontal_margin"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/notosanscjkkrmedium"
            android:gravity="center"

            android:includeFontPadding="false"
            android:text="@string/rsv_time_tv"
            android:textColor="@color/mainGrey"
            android:textSize="@dimen/textsize_default"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timeContentTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_small_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_small_horizontal_margin"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="@dimen/activity_small_vertical_margin"
            android:layout_weight="1"

            android:fontFamily="@font/notosanscjkkrmedium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="시간을 입력해주세요"
            android:textColor="@color/mainPink"
            android:textSize="@dimen/textsize_default"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeTv" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rsv_memo_layout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="@dimen/activity_big_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_big_horizontal_margin"
        android:layout_marginTop="@dimen/activity_small_vertical_margin"
        android:layout_marginEnd="@dimen/activity_big_horizontal_margin"
        android:background="@drawable/rounded_corner_weakgrey"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rsv_time_layout">

        <TextView
            android:id="@+id/memoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_small_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_small_horizontal_margin"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/notosanscjkkrmedium"
            android:gravity="center"

            android:includeFontPadding="false"
            android:text="@string/memo_tv"
            android:textColor="@color/mainGrey"
            android:textSize="@dimen/textsize_default"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/memoEt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/activity_small_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_small_horizontal_margin"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="@dimen/activity_small_horizontal_margin"
            android:layout_marginRight="@dimen/activity_small_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_small_vertical_margin"
            android:layout_weight="3"
            android:background="@null"
            android:fontFamily="@font/notosanscjkkrmedium"
            android:gravity="top"

            android:hint="예약시 특이사항을 메모해주세요"
            android:includeFontPadding="false"
            android:inputType="textMultiLine"

            android:textColor="@color/mainGrey"
            android:textColorHint="@color/mainGreyFor50"
            android:textSize="@dimen/textsize_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/memoTv" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/okBtn"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"

        android:background="@color/mainPink"
        android:fontFamily="@font/notosansmonocjkkrbold"

        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/rsv_ok_btn"
        android:textColor="@color/mainGrey"
        android:textSize="@dimen/textsize_default"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>